# Parking-Management

./: CMakeLists.txt  Makefile  README.md  demo.cpp
Gates/: entrance_gate.cpp  entrance_gate.hpp  exit_gate.cpp  exit_gate.hpp
Parking/: bike_parking_spot.cpp  bike_parking_spot.hpp  car_parking_spot.cpp  car_parking_spot.hpp  parking_floor.cpp  parking_floor.hpp  parking_service.cpp  parking_service.hpp  parking_spot.cpp  parking_spot.hpp
Payment/: credit_card_payment.cpp  credit_card_payment.hpp  payment_service.cpp  payment_service.hpp  payment_strategy.hpp  upi_payment.cpp  upi_payment.hpp
Ticket/: ticket.cpp  ticket.hpp
Vehicles/: bike.cpp  bike.hpp  car.cpp  car.hpp  vehicle.cpp  vehicle.hpp  vehicle_factory.cpp  vehicle_factory.hpp
